fix invoke table wrap

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -54,8 +54,7 @@
 .line {
     @include font(body);
     padding-bottom: 8px;
-    text-overflow: ellipsis;
-    overflow: hidden;
+
     &.wide {
         padding-top: 18px;
     }
